force-app/main/default/objects/Centro_de_CO__c/Centro_de_CO__c.object-meta.xml
<CustomObject>
    <label>Centro de CO</label>
    <nameField>
        <label>CO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centros de CO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>