force-app/main/default/objects/Centro_de_CO__c/fields/Campania__c.field-meta.xml
<CustomField>
    <fullName>Campania__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15/16</fullName>
            </value>
            <value>
                <fullName>16/2016</fullName>
            </value>
            <value>
                <fullName>17/2017</fullName>
            </value>
            <value>
                <fullName>18/2018</fullName>
            </value>
            <value>
                <fullName>19/2019</fullName>
            </value>
            <value>
                <fullName>20/2020</fullName>
            </value>
            <value>
                <fullName>21/2021</fullName>
            </value>
            <value>
                <fullName>22/2022</fullName>
            </value>
            <value>
                <fullName>23/2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>