force-app/main/default/objects/Centro_de_CO__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>SAP Order</label>
    <length>16</length>
    <type>Text</type>
</CustomField>