force-app/main/default/objects/Centro_de_CO__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01US</fullName>
            </value>
            <value>
                <fullName>02US</fullName>
            </value>
            <value>
                <fullName>BRMX</fullName>
                <isActive>false</isActive>
                <label>BRMX</label>
            </value>
            <value>
                <fullName>DSEM</fullName>
                <isActive>false</isActive>
                <label>DSEM</label>
            </value>
            <value>
                <fullName>E002</fullName>
                <isActive>false</isActive>
                <label>E002</label>
            </value>
            <value>
                <fullName>U001</fullName>
                <isActive>false</isActive>
                <label>U001</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>