force-app/main/default/objects/Centro_de_CO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Sociedad__c</columns>
    <columns>Orden__c</columns>
    <columns>Campania__c</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campania__c</field>
        <operation>equals</operation>
        <value>23/2023</value>
    </filters>
    <label>All</label>
</ListView>